--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,15 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Web site created using create-react-app" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-		<title>React App</title>
+		<meta
+			name="description"
+			content="Email signature generator for Mesilla Valley Transportation"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+		/>
+		<title>MVT Signature Generator</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
